# taulixir

./: .gitignore  README.md  adjust_midway.sh  copy_midway.sh
app/: package.json  pnpm-lock.yaml
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/routes/: +page.svelte
midway/: README.md  mix.exs
midway/lib/: application.ex  counter.ex  web.ex
midway/test/: midway_test.exs
tauri-plugin-erl_rpc/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-erl_rpc/guest-js/: index.ts
tauri-plugin-erl_rpc/permissions/: default.toml
tauri-plugin-erl_rpc/permissions/autogenerated/: reference.md
tauri-plugin-erl_rpc/permissions/autogenerated/commands/: invoke_erl_rpc.toml
tauri-plugin-erl_rpc/permissions/schemas/: schema.json
tauri-plugin-erl_rpc/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
